src/objects/Approval_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Role__c</fullName>
        <label>Approval Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance Controller</fullName>
                </value>
                <value>
                    <fullName>Customer Relations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Manager__c</fullName>
        <formula>Approver__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <label>Approval Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approval_Role__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Approver__c</columns>
        <columns>Approver_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Approval Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>